--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,5 +14,5 @@ llama-index==0.10.46
 llama-index-vector-stores-chroma==0.1.8
 llama-index-llms-ollama==0.1.4
 llama-index-embeddings-ollama==0.1.2
-chromadb-client==0.5.0
+chromadb==0.5.4
 # llama-index-embeddings-huggingface==0.2.0 
