--- a/rag_pipeline/requirements.txt
+++ b/rag_pipeline/requirements.txt
@@ -7,6 +7,10 @@ python-docx==1.1.2
 pypdf==4.2.0
 # Для .jsonl
 jsonlines==4.0.0
+# Интеграция с векторной БД
+llama-index-vector-stores-chroma==0.1.8
+chromadb==0.5.4
 # Классификация через LLM
 llama-index-program-openai==0.1.6
-llama-index-llms-ollama==0.1.4 
+llama-index-llms-ollama==0.1.4
+llama-index-embeddings-ollama==0.1.2 
