--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,34 +10,19 @@ services:
       - ollama_data:/root/.ollama
     restart: unless-stopped
 
-  db:
-    image: postgres:16-alpine
-    container_name: postgres_db
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+  anythingllm:
+    image: anythingllm/anythingllm:latest
+    container_name: anythingllm
     ports:
-      - "5432:5432"
+      - "3001:3001" # Веб-интерфейс AnythingLLM
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - anythingllm_storage:/app/server/storage
+      - anythingllm_hotdir:/app/collector/hotdir # Папка для авто-загрузки документов
+    depends_on:
+      - ollama
     restart: unless-stopped
-
-  chromadb:
-    image: chromadb/chroma:latest
-    container_name: chromadb
-    ports:
-      - "8001:8000" # Используем 8001, чтобы не конфликтовать с FastAPI
-    volumes:
-      - chroma_data:/chroma
-    restart: unless-stopped
-
-  redis:
-    image: redis:7-alpine
-    container_name: redis_cache
-    ports:
-      - "6379:6379"
-    restart: unless-stopped
+    cap_add:
+      - SYS_ADMIN # Требуется для Puppeteer внутри контейнера
 
   backend:
     build:
@@ -48,10 +33,8 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
       - ollama
-      - chromadb
-      - redis
+      - anythingllm
     restart: unless-stopped
 
   telegram_bot:
@@ -62,6 +45,8 @@ services:
       - .env
     depends_on:
       - backend
+    volumes:
+      - ./telegram_bot/logs:/app/logs
     restart: unless-stopped
   
   analytics:
@@ -72,11 +57,11 @@ services:
       - .env
     ports:
       - "8501:8501"
-    depends_on:
-      - db
+    volumes:
+      - ./telegram_bot/logs:/app/telegram_bot/logs:ro # Только чтение
     restart: unless-stopped
 
 volumes:
-  postgres_data:
-  chroma_data:
-  ollama_data: 
+  ollama_data:
+  anythingllm_storage:
+  anythingllm_hotdir: 
